adding icra bibtex

--- a/failure_mitigation.html
+++ b/failure_mitigation.html
@@ -205,7 +205,7 @@
             <table align=center width=650>
              <center><h1>Paper</h1></center>
                 <tr>
-                  <td><a href="https://arxiv.org/pdf/2309.13475.pdf"><img style="height:280px" src="images/icra_paper_preview.png"/></a></td>
+                  <td><a href="https://arxiv.org/pdf/2309.13475.pdf"><img style="height:280px" src="papers/failure_mitigation/icra_paper_preview.png"/></a></td>
                   <td><span style="font-size:14pt">Gupta, Chakraborty, Bansal<br><br>
                     Detecting and Mitigating System-Level Anomalies of Vision-Based
                     Controllers
@@ -221,7 +221,7 @@
                     </center></td>
 
                   <td><span style="font-size:14pt"><center>
-                      <a href="">[Bibtex]</a>
+                      <a href="papers/failure_mitigation/bibtex.bib">[Bibtex]</a>
                     </center></td>
               </tr>
             </table>
@@ -233,7 +233,7 @@
             <table align=center width=1000px>
                 <tr>
                         <center>
-                          <a href=''><img class="round" style="width: 700;" src="images/icra.png"/></a>
+                          <a href=''><img class="round" style="width: 700;" src="papers/failure_mitigation/icra.png"/></a>
                         </center>
               </tr>
           </table>
@@ -254,7 +254,7 @@
               <tr>
                   <td width=600px>
                     <center>
-                        <a href="images/icra_results.png"><img src = "images/icra_results.png" width="600px"></img></href></a><br>
+                        <a href="papers/failure_mitigation/icra_results.png"><img src = "papers/failure_mitigation/icra_results.png" width="600px"></img></href></a><br>
                   </center>
                   </td>
               </tr>
