--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 										</ul>
 									</div>
 									<div>
-										<img src="images/icra.png" />
+										<img src="papers/failure_mitigation/icra.png" />
 									</div>
 								</div>
 
