editing aiitra page

--- a/index.html
+++ b/index.html
@@ -170,12 +170,13 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/aiitra2.png" alt=""/></a>
+											<a href="projects/multi_agent_coverage/" class="image"><img src="images/aiitra2.png" alt=""/></a>
 											<h3>Multi-Agent Warehouse Cleaning</h3>
 											<p>Efficient coverage and cleaning of unknown terrains using multiple ground robots.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/Vox-Bot" class="button">Code</a></li>
-												<li><a href="https://docs.google.com/presentation/d/15Tr9ttaVZmQwHbguTARzjeVO22R2nE5FTYrOWf2-XHw/edit?usp=sharing" class="button">Report</a></li>
+												<li><a href="projects/multi_agent_coverage/" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Vox-Bot" class="button small">Code</a></li>
+												<li><a href="https://docs.google.com/presentation/d/15Tr9ttaVZmQwHbguTARzjeVO22R2nE5FTYrOWf2-XHw/edit?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
