editing project pages

--- a/index.html
+++ b/index.html
@@ -184,8 +184,9 @@
 											<h3>UAV Control and Swarming</h3>
 											<p>Cascaded PID-based control and swarm motion of drones.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/Drona_Aviation_Pluto_Swarm_Challenge" class="button">Code</a></li>
-												<li><a href="https://drive.google.com/file/d/1MfTUgXobM4bYxJc3moGjneKoeCTwPCv5/view?usp=sharing" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Drona_Aviation_Pluto_Swarm_Challenge" class="button small">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1MfTUgXobM4bYxJc3moGjneKoeCTwPCv5/view?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -193,8 +194,9 @@
 											<h3>Multi-Purpose Household Robot</h3>
 											<p>Fabricated a ground robot to perform household chores and baby care.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/Multi-Purpose-HouseHold-Bot" class="button">Code</a></li>
-												<li><a href="https://drive.google.com/file/d/1LK5S5EnnhTdDiMbbFOUx6peoZhiU1zt4/view?usp=sharing" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Multi-Purpose-HouseHold-Bot" class="button small">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1LK5S5EnnhTdDiMbbFOUx6peoZhiU1zt4/view?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -202,8 +204,9 @@
 											<h3>Small World IoT Networks</h3>
 											<p>Enhanced network performance by introducing small-world phenomenon using actor-critic reinforcement learning.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/Small-World-IoT-Networks" class="button">Code</a></li>
-												<li><a href="https://drive.google.com/file/d/1HTRFOVvWIN-C2Wldn28KJDyPwLPyEHQW/view" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Small-World-IoT-Networks" class="button small">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1HTRFOVvWIN-C2Wldn28KJDyPwLPyEHQW/view" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -211,8 +214,9 @@
 											<h3>UAV Guided UGV Navigation</h3>
 											<p>UAV aided mapping and localization for a UGV to autonomously traverse in mountainous terrains.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/DRDO-UAV-Guided-UGV-Navigation" class="button">Code</a></li>
-												<li><a href="https://docs.google.com/presentation/d/1wgCw-pj4WYZ1QgIoMBwp1pqgJasY5RpXskZN9Sr_edU/edit?usp=sharing" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/DRDO-UAV-Guided-UGV-Navigation" class="button small">Code</a></li>
+												<li><a href="https://docs.google.com/presentation/d/1wgCw-pj4WYZ1QgIoMBwp1pqgJasY5RpXskZN9Sr_edU/edit?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -220,8 +224,9 @@
 											<h3>Pipe Traversal Robot</h3>
 											<p>16-DoF Quadruped trained using DDPG algorithm for movement in subterranean pipes environment.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/Pipe-Traversal-Bot" class="button">Code</a></li>
-												<li><a href="https://drive.google.com/file/d/1dcmFV0audPIdikB3NqbbBkgclz0oWHxY/view?usp=drive_link" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Pipe-Traversal-Bot" class="button small">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1dcmFV0audPIdikB3NqbbBkgclz0oWHxY/view?usp=drive_link" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -229,8 +234,9 @@
 											<h3>Thermal Image Colorization</h3>
 											<p>Infrared to RGB coversion using Pix-to-Pix GAN algorithm.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Code</a></li>
-												<li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="#" class="button small">Code</a></li>
+												<li><a href="https://drive.google.com/file/d/1JKadravpzSGh7hM2-W0FOq1hFH25nDyr/view?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -238,8 +244,9 @@
 											<h3>Handwritten CAPTCHA Recognition</h3>
 											<p>Detection and recognition of handwritten captchas made of alphabets and emojis.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/Hand-Written-CAPTCHA-Recognition" class="button">Code</a></li>
-												<li><a href="#" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Hand-Written-CAPTCHA-Recognition" class="button small">Code</a></li>
+												<li><a href="#" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
@@ -247,8 +254,9 @@
 											<h3>Automated Traffic Control System</h3>
 											<p>IoT-based solution for reducing road accidents and enhancing peoples' safety.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/phoenixrider12/Automated-Traffic-Control-System" class="button">Code</a></li>
-												<li><a href="https://docs.google.com/presentation/d/1JJ--6UHFh02VZ0OyQScio4vEjmKr1QLc/edit?usp=sharing&ouid=110229048173610613882&rtpof=true&sd=true" class="button">Report</a></li>
+												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Automated-Traffic-Control-System" class="button small">Code</a></li>
+												<li><a href="https://docs.google.com/presentation/d/1JJ--6UHFh02VZ0OyQScio4vEjmKr1QLc/edit?usp=sharing&ouid=110229048173610613882&rtpof=true&sd=true" class="button small">Report</a></li>
 											</ul>
 										</article>
 									</div>
