adding project pages

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 									<div class="posts">
 										<article>
 											<a href="projects/multi_agent_coverage/" class="image"><img src="images/aiitra2.png" alt=""/></a>
-											<h3>Multi-Agent Warehouse Cleaning</h3>
+											<h3>Multi-Agent Warehouse Coverage & Cleaning</h3>
 											<p>Efficient coverage and cleaning of unknown terrains using multiple ground robots.</p>
 											<ul class="actions">
 												<li><a href="projects/multi_agent_coverage/" class="button small">Website</a></li>
@@ -180,51 +180,61 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/drona.png" alt="" /></a>
+											<a href="projects/uav_swarming/" class="image"><img src="images/drona.png" alt="" /></a>
 											<h3>UAV Control and Swarming</h3>
 											<p>Cascaded PID-based control and swarm motion of drones.</p>
 											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="projects/uav_swarming/" class="button small">Website</a></li>
 												<li><a href="https://github.com/phoenixrider12/Drona_Aviation_Pluto_Swarm_Challenge" class="button small">Code</a></li>
 												<li><a href="https://drive.google.com/file/d/1MfTUgXobM4bYxJc3moGjneKoeCTwPCv5/view?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/mphb.gif" alt="" /></a>
+											<a href="projects/exploration_and_obstacle_avoidance/" class="image"><img src="images/iisc_project.png" alt=""/></a>
+											<h3>Mult-Agent Exploration & Dynamic Obstacle Avoidance</h3>
+											<p>RRT-Exploration and visual obstacle detection and avoidance package.</p>
+											<ul class="actions">
+												<li><a href="projects/exploration_and_obstacle_avoidance/" class="button small">Website</a></li>
+												<li><a href="https://github.com/phoenixrider12/Vox-Bot" class="button small">Code</a></li>
+												<li><a href="https://docs.google.com/presentation/d/15Tr9ttaVZmQwHbguTARzjeVO22R2nE5FTYrOWf2-XHw/edit?usp=sharing" class="button small">Report</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="projects/household_bot/" class="image"><img src="images/mphb.gif" alt="" /></a>
 											<h3>Multi-Purpose Household Robot</h3>
 											<p>Fabricated a ground robot to perform household chores and baby care.</p>
 											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="projects/household_bot/" class="button small">Website</a></li>
 												<li><a href="https://github.com/phoenixrider12/Multi-Purpose-HouseHold-Bot" class="button small">Code</a></li>
 												<li><a href="https://drive.google.com/file/d/1LK5S5EnnhTdDiMbbFOUx6peoZhiU1zt4/view?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/btp.png" alt="" /></a>
+											<a href="projects/small_world_networks/" class="image"><img src="images/btp.png" alt="" /></a>
 											<h3>Small World IoT Networks</h3>
 											<p>Enhanced network performance by introducing small-world phenomenon using actor-critic reinforcement learning.</p>
 											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="projects/small_world_networks/" class="button small">Website</a></li>
 												<li><a href="https://github.com/phoenixrider12/Small-World-IoT-Networks" class="button small">Code</a></li>
 												<li><a href="https://drive.google.com/file/d/1HTRFOVvWIN-C2Wldn28KJDyPwLPyEHQW/view" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/uav_ugv.gif" alt="" /></a>
+											<a href="projects/uav_ugv_navigation/" class="image"><img src="images/uav_ugv.gif" alt="" /></a>
 											<h3>UAV Guided UGV Navigation</h3>
 											<p>UAV aided mapping and localization for a UGV to autonomously traverse in mountainous terrains.</p>
 											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="projects/uav_ugv_navigation/" class="button small">Website</a></li>
 												<li><a href="https://github.com/phoenixrider12/DRDO-UAV-Guided-UGV-Navigation" class="button small">Code</a></li>
 												<li><a href="https://docs.google.com/presentation/d/1wgCw-pj4WYZ1QgIoMBwp1pqgJasY5RpXskZN9Sr_edU/edit?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ptb.png" alt="" /></a>
+											<a href="projects/pipe_traversal_bot/" class="image"><img src="images/ptb.png" alt="" /></a>
 											<h3>Pipe Traversal Robot</h3>
 											<p>16-DoF Quadruped trained using DDPG algorithm for movement in subterranean pipes environment.</p>
 											<ul class="actions">
-												<li><a href="#" class="button small">Website</a></li>
+												<li><a href="projects/pipe_traversal_bot/" class="button small">Website</a></li>
 												<li><a href="https://github.com/phoenixrider12/Pipe-Traversal-Bot" class="button small">Code</a></li>
 												<li><a href="https://drive.google.com/file/d/1dcmFV0audPIdikB3NqbbBkgclz0oWHxY/view?usp=drive_link" class="button small">Report</a></li>
 											</ul>
