--- a/projects/uav_ugv_navigation/index.html
+++ b/projects/uav_ugv_navigation/index.html
@@ -120,7 +120,7 @@
   <body>
     <br>
     <center>
-    <span style="font-size:42px"><u>Multi-Agent Coverage and Cleaning</u></span>
+    <span style="font-size:42px"><u>UAV-Guided UGV Navigation</u></span>
     </center>
 
     <br><br>
