--- a/projects/uav_swarming/index.html
+++ b/projects/uav_swarming/index.html
@@ -120,7 +120,7 @@
   <body>
     <br>
     <center>
-    <span style="font-size:42px"><u>Multi-Agent Coverage and Cleaning</u></span>
+    <span style="font-size:42px"><u>Multi-UAV Control and Swarming</u></span>
     </center>
 
     <br><br>
